--- a/css/styles.css
+++ b/css/styles.css
@@ -325,6 +325,7 @@ img {
   padding: 11px 0 11px 42px;
   cursor: pointer;
   transition: border-color var(--duration) var(--timing-function);
+  outline: none;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
