--- a/css/styles.css
+++ b/css/styles.css
@@ -285,7 +285,7 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 528px;
-  min-height: 581px;
+  height: 581px;
   padding: 40px;
 
   border-radius: 4px;
@@ -356,6 +356,8 @@ img {
 
 .modal-form-textarea {
   width: 100%;
+  height: 120px;
+  display: block;
   padding: 11px 0 11px 12px;
   cursor: pointer;
   transition: border-color var(--duration) var(--timing-function);
@@ -371,6 +373,8 @@ img {
 }
 
 .modal-label {
+  display: block;
+  margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.17;
 
